--- a/src/lang/ja-JP.json
+++ b/src/lang/ja-JP.json
@@ -163,7 +163,7 @@
     "3d329aff": "デフォルトポート {port}",
     "3d718795": "詳細については、以下を参照してください",
     "3f729287": "音声をトリミング",
-    "409f6765": "音声役割",
+    "409f6765": "音声ロール",
     "40e81fd3": "動画生成",
     "40ead249": "動画テンプレート",
     "40eadd12": "動画テンプレート",
@@ -201,7 +201,7 @@
     "5dc07189": "モデルを追加",
     "5e1bac63": "キーワードを入力してフィルタリング",
     "62bef086": "開発者ツール",
-    "65baa0c4": "音声役割を選択してください。",
+    "65baa0c4": "音声ロールを選択してください。",
     "65bc9692": "音声ファイルを選択",
     "6a7ee8a1": "CPUを使用",
     "6c9b6559": "モデルファイルを選択",
