モデルへのリンクを明記する。分かりにくいので

--- a/src/lang/en-US.json
+++ b/src/lang/en-US.json
@@ -96,12 +96,12 @@
     "195c95f2": "The model service directory contains the configuration files for the model service and the executable files for the model service.",
     "1bb341a5": "This product is open-source software under the AGPL-3.0 license.",
     "1e2bcd5b": "Confirm delete ?",
-    "216e470a": "Visit the official model page to download available models locally",
+    "216e470a": "Visit the official model page (https://aigcpanel.com/en/asset) to download available models locally",
     "23dcec1c": "sound length duration greater than 3s",
     "259ff066": "Download Failed",
     "25a0c8e1": "Download Successful",
     "25aba9c4": "View Code",
-    "25d99435": "主题样式",
+    "25d99435": "Theme Style",
     "25e596a4": "Feedback",
     "2615bdd6": "Where to find model files?",
     "26276a3a": "Stop Service",
