--- a/src/lang/ja-JP.json
+++ b/src/lang/ja-JP.json
@@ -96,7 +96,7 @@
     "195c95f2": "モデルサービスディレクトリには、モデルサービスの設定ファイルと実行ファイルが含まれています。",
     "1bb341a5": "この製品はAGPL-3.0ライセンスのオープンソースソフトウェアです。",
     "1e2bcd5b": "削除してもよろしいですか？",
-    "216e470a": "公式モデルページにアクセスして、利用可能なモデルをローカルにダウンロード",
+    "216e470a": "公式モデルページ(https://aigcpanel.com/en/asset)にアクセスして、利用可能なモデルをローカルにダウンロード",
     "23dcec1c": "音声の長さは3秒以上必要です",
     "259ff066": "ダウンロード失敗",
     "25a0c8e1": "ダウンロード成功",
