--- a/src/lang/zh-CN.json
+++ b/src/lang/zh-CN.json
@@ -96,7 +96,7 @@
     "195c95f2": "模型服务目录，包含模型服务的配置文件和模型服务程序文件。",
     "1bb341a5": "本产品为开源软件，遵循 AGPL-3.0 license 协议。",
     "1e2bcd5b": "确认删除？",
-    "216e470a": "访问官方提供的可用模型页面，下载模型文件到本地",
+    "216e470a": "访问官方提供的可用模型页面，下载模型文件到本地(https://aigcpanel.com/zh/asset)",
     "259ff066": "下载失败",
     "25a0c8e1": "下载成功",
     "25aba9c4": "代码查看",
